user model setup, validations, password hash for mongodb

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/garychan8523/mean-angular2-blog#readme",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.17.2",
     "express": "^4.15.4",
     "inherits": "^2.0.3",
     "mongoose": "^4.11.9",
