--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "mean stack with angular 2",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "cd client && ng build --prod && cd .. && node index.js"
   },
   "repository": {
     "type": "git",
