--- a/client/package.json
+++ b/client/package.json
@@ -21,10 +21,12 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "@types/socket.io-client": "^1.4.32",
     "angular2-flash-messages": "^1.0.8",
     "angular2-jwt": "^0.2.3",
     "core-js": "^2.4.1",
     "rxjs": "^5.4.2",
+    "socket.io-client": "^2.1.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
