--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "build": "cd client && ng build --prod && cd .. && node index.js"
+    "build": "cd client && ng build --prod"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^8.0.0",
     "mongoose": "^4.11.9",
     "nodemon": "^1.11.0",
-    "request-ip": "^2.0.2"
+    "request-ip": "^2.0.2",
+    "socket.io": "^2.1.1"
   }
 }
