--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "build": "cd client && ng build --prod"
+    "build": "cd client && ng build --prod && cd .. && nodemon index.js"
   },
   "repository": {
     "type": "git",
