--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "mean stack with angular 2",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "build": "cd client && ng build --prod && cd .. && nodemon index.js"
   },
   "repository": {
