--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,8 @@
     "@types/socket.io-client": "^1.4.32",
     "angular2-flash-messages": "^3.0.1",
     "core-js": "^2.4.1",
+    "quill": "^1.3.7",
+    "quill-image-resize-module": "^3.0.0",
     "rxjs": "~6.6.0",
     "socket.io-client": "^2.1.1",
     "tslib": "^2.0.0",
