override quill image upload handler, image will be uploaded to aws s3

--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
   },
   "homepage": "https://github.com/garychan8523/mean-angular2-blog#readme",
   "dependencies": {
+    "aws-sdk": "^2.983.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
     "cors": "^2.8.4",
     "express": "^4.15.4",
+    "express-fileupload": "^1.2.1",
     "inherits": "^2.0.3",
     "jsonwebtoken": "^8.0.0",
-    "mongoose": "^5.11.11",
+    "mongoose": "^5.13.9",
     "nodemon": "^1.11.0",
     "request-ip": "^2.0.2",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "uuid": "^8.3.2"
   }
 }
