update to node version v20.11.0, angular version 17.1.1

--- a/client/angular.json
+++ b/client/angular.json
@@ -17,9 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "allowedCommonJsDependencies": [
-              "angular2-flash-messages"
-            ],
+            "allowedCommonJsDependencies": [],
             "outputPath": "../public",
             "index": "src/index.html",
             "main": "src/main.ts",
