--- a/client/package.json
+++ b/client/package.json
@@ -12,41 +12,41 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.1.1",
-    "@angular/common": "^17.1.1",
-    "@angular/compiler": "^17.1.1",
-    "@angular/core": "^17.1.1",
-    "@angular/forms": "^17.1.1",
+    "@angular/animations": "~17.1.1",
+    "@angular/common": "~17.1.1",
+    "@angular/compiler": "~17.1.1",
+    "@angular/core": "~17.1.1",
+    "@angular/forms": "~17.1.1",
     "@angular/http": "^7.2.16",
-    "@angular/platform-browser": "^17.1.1",
-    "@angular/platform-browser-dynamic": "^17.1.1",
-    "@angular/router": "^17.1.1",
-    "@auth0/angular-jwt": "^5.0.2",
-    "@types/socket.io-client": "^1.4.32",
-    "core-js": "^2.4.1",
+    "@angular/platform-browser": "~17.1.1",
+    "@angular/platform-browser-dynamic": "~17.1.1",
+    "@angular/router": "~17.1.1",
+    "@auth0/angular-jwt": "^5.2.0",
+    "@types/socket.io-client": "^1.4.36",
+    "core-js": "^3.35.1",
     "quill": "^1.3.7",
     "quill-image-resize-module": "^3.0.0",
-    "rxjs": "~6.6.0",
-    "socket.io-client": "^2.1.1",
-    "tslib": "^2.0.0",
+    "rxjs": "~7.8.1",
+    "socket.io-client": "^4.7.4",
+    "tslib": "^2.6.2",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.1.1",
-    "@angular/cli": "^17.1.1",
-    "@angular/compiler-cli": "^17.1.1",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
+    "@angular-devkit/build-angular": "~17.1.1",
+    "@angular/cli": "~17.1.1",
+    "@angular/compiler-cli": "~17.1.1",
+    "@types/jasmine": "~5.1.4",
+    "@types/node": "^20.11.13",
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "~5.1.1",
+    "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.4.2",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.1",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
+    "ts-node": "~10.9.2",
     "tslint": "~6.1.0",
     "typescript": "~5.3.3"
   }
